--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,6 +30,7 @@
 // Import component styles
 @import "components/tables";
 @import "components/forms";
+@import "components/cards";
 @import "components/buttons";
 @import "components/errors";
 @import "components/articles";
