--- a/resources/sass/components/_articles.scss
+++ b/resources/sass/components/_articles.scss
@@ -3,34 +3,31 @@
     flex-direction: column;
     justify-content: center;
 
-    &.text {
-        width: clamp(45ch, 50%, 75ch);
-        margin: 0 auto;
-    }
-
-    .article__title--main {
-        margin-bottom: 0.5em;
-    }
-
     .article__title {
-        margin-bottom: 0.25em;
-    }
-
-    .article__title--underline {
         display: inline-block;
-        position: relative;
-        &::before {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            width: 125%;
-            border-bottom: 4px solid $color-dark;
-        }
+        margin-bottom: 0.25em;
     }
 
     .article__content {
         width: 100%;
         margin-bottom: 1.5em;
+    }
+}
+
+.article__title--main {
+    display: inline-block;
+    margin-bottom: 0.5em;
+}
+
+.article__title--underline {
+    position: relative;
+
+    &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 125%;
+        border-bottom: 4px solid $color-dark;
     }
 }
