--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -47,7 +47,7 @@
         &:focus,
         &:hover {
             background-color: rgba(25, 118, 210, 0.04);
-            border: 1px solid $color-primary-dark;
+            border: 1px solid $color-primary;
         }
     }
 
@@ -57,7 +57,7 @@
 
         &:focus,
         &:hover {
-            border: 1px solid $color-secondary-dark;
+            border: 1px solid $color-secondary;
         }
     }
 
