--- a/resources/sass/layouts/_section.scss
+++ b/resources/sass/layouts/_section.scss
@@ -20,7 +20,8 @@ section {
     }
 
     &.text {
-        grid-template-columns: [full-width-start] auto [content-start] clamp(45ch, 50%, 75ch) [content-end] auto [full-width-end];
+        grid-template-columns: [full-width-start] auto [content-start] clamp(45ch, 50%, 70ch) [content-end] auto [full-width-end];
+        margin: 0 1em;
     }
 
     .left,
@@ -38,6 +39,9 @@ section {
         &.hero {
             grid-template-columns: [full-width-start] 2em [content-start] 1fr [content-end] 2em [full-width-end];
         }
+        &.text {
+            margin: 0 2em;
+        }
     }
 }
 
@@ -45,6 +49,9 @@ section {
     section {
         &.hero {
             grid-template-columns: [full-width-start] auto [content-start] 840px [content-end] auto [full-width-end];
+        }
+        &.text {
+            margin: 0;
         }
     }
 }
@@ -54,6 +61,9 @@ section {
         &.hero {
             grid-template-columns: [full-width-start] 12em [content-start] 1fr [content-end] 12em [full-width-end];
         }
+        &.text {
+            margin: 0 12em;
+        }
     }
 }
 
@@ -61,6 +71,9 @@ section {
     section {
         &.hero {
             grid-template-columns: [full-width-start] auto [content-start] 1040px [content-end] auto [full-width-end];
+        }
+        &.text {
+            margin: 0;
         }
     }
 }
