--- a/resources/sass/base/_reset.scss
+++ b/resources/sass/base/_reset.scss
@@ -77,6 +77,7 @@ progress {
 /* Reset for textarea element */
 textarea {
     overflow: auto;
+    vertical-align: bottom; /* fix for chromium browsers 🙄 */
 }
 
 /* Reset for details element */
