--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -15,16 +15,19 @@ form {
             position: absolute;
             transform: scale(1);
             transform-origin: top left;
-            bottom: -0.2em;
+            top: 0.375em;
             font-size: 1.125em;
             margin-left: 0.625em;
-            margin-bottom: 0.625em;
             transition:
                 transform 200ms cubic-bezier(0, 0, 0.2, 1),
                 left 200ms cubic-bezier(0, 0, 0.2, 1),
-                bottom 200ms cubic-bezier(0, 0, 0.2, 1);
+                top 200ms cubic-bezier(0, 0, 0.2, 1);
             z-index: 1;
             cursor: text;
+        }
+
+        &:has(.input--filled) .form__label {
+            margin-top: 0.75em;
         }
 
         .form__input,
@@ -40,6 +43,7 @@ form {
 
             &.input--standard {
                 border-bottom: 1px solid;
+                min-height: 42px;
             }
 
             &.input--filled {
@@ -48,11 +52,13 @@ form {
                 border-top-left-radius: $border-radius;
                 border-top-right-radius: $border-radius;
                 padding-top: 1.125em;
+                min-height: 55px;
             }
 
             &.input--outlined {
                 border: 1px solid;
                 border-radius: $border-radius;
+                min-height: 43px;
             }
         }
 
@@ -86,13 +92,16 @@ form {
 
         &:has(.input--standard:hover)::after,
         &:has(.input--standard:focus)::after,
+        &:has(.input--standard > option:checked)::after,
         &:has(.input--filled:hover)::after,
-        &:has(.input--filled:focus)::after {
+        &:has(.input--filled:focus)::after,
+        &:has(.input--standard > option:checked)::after {
             transform: scaleX(1);
         }
 
         &:has(.input--outlined:hover)::after,
-        &:has(.input--outlined:focus)::after {
+        &:has(.input--outlined:focus)::after,
+        &:has(.input--outlined > option:checked)::after {
             inset: 0;
             border-width: 2px;
             border-style: solid;
@@ -113,19 +122,20 @@ form {
             color: $color-primary;
             cursor: default;
         }
+
         &:has(.input--standard:focus) .form__label,
         &:has(.input--standard:not(:placeholder-shown)) .form__label,
         &:has(.input--standard > option:checked) .form__label,
         &:has(.input--filled:focus) .form__label,
         &:has(.input--filled:not(:placeholder-shown)) .form__label,
         &:has(.input--filled > option:checked) .form__label {
-            bottom: 1.125em;
+            top: -0.8125em;
         }
 
         &:has(.input--outlined:focus) .form__label,
         &:has(.input--outlined:not(:placeholder-shown)) .form__label,
         &:has(.input--outlined > option:checked) .form__label {
-            bottom: 0.8125em;
+            top: -0.625em;
             background: $color-white;
         }
     }
