--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -5,7 +5,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 99;
+    z-index: 99999;
 
     nav {
         display: flex;
@@ -13,26 +13,57 @@ header {
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 50px;
+        height: 3.75em;
         padding: 1em;
         background: $color-primary;
-
-        ul {
-            display: none;
-            flex-direction: column;
-            height: 100%;
-
-            &.show {
-                display: flex;
-            }
-
-            li {
-            }
-        }
+        box-shadow:
+            0 1px 3px rgba(0, 0, 0, 0.12),
+            0 1px 2px rgba(0, 0, 0, 0.24);
 
         a {
             color: white;
             text-decoration: none;
+            font-family: $font-family-secondary;
+            font-size: 1.2em;
+            display: inline-block;
+            width: max-content;
+        }
+
+        .nav__main {
+            display: none;
+            height: 100%;
+
+            &.show {
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                inset: 3.75em 0 0 0;
+            }
+
+            li {
+                padding: 2.5em 1em;
+                width: 100%;
+                text-align: center;
+                background: $color-primary;
+
+                a {
+                    font-size: 1.5em;
+                }
+            }
+        }
+
+        .nav__locale {
+            li {
+                padding: 2.5em 1em;
+                width: 100%;
+                text-align: center;
+                background: $color-primary;
+
+                a {
+                    font-size: 1em;
+                }
+            }
         }
     }
 
@@ -43,6 +74,7 @@ header {
         right: 32px;
         top: 50%;
         transform: translateY(-50%);
+        cursor: pointer;
 
         span {
             position: absolute;
@@ -81,20 +113,43 @@ header {
                 padding: 2.5em 5em;
                 font-size: 2em;
                 background: none;
+                box-shadow: none;
+
+                .nav__locale {
+                    margin-top: 8px;
+                }
             }
 
-            ul {
+            .nav__main,
+            .nav__locale {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+            }
+
+            .nav__main {
                 li {
+                    padding: 0;
+                    background: none;
+
                     &:not(:last-of-type) {
-                        margin-right: 1em;
+                        margin-right: 1.5em;
                     }
+
                     a {
                         &.active {
                             border-bottom: 2px solid white;
                         }
+                    }
+                }
+            }
+
+            .nav__locale {
+                margin-top: 5px;
+
+                li {
+                    &:not(:last-of-type) {
+                        margin-right: 0.5em;
                     }
                 }
             }
