--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,7 @@
 @import "pages/contact";
 
 // Import component styles
+@import "components/nav";
 @import "components/tables";
 @import "components/forms";
 @import "components/cards";
