--- a/resources/sass/base/_helper.scss
+++ b/resources/sass/base/_helper.scss
@@ -4,6 +4,10 @@
     display: none;
 }
 
+.sticky {
+    position: sticky;
+}
+
 .elevate {
     box-shadow:
         0 3px 6px rgba(0, 0, 0, 0.16),
