--- a/resources/sass/base/_printable.scss
+++ b/resources/sass/base/_printable.scss
@@ -1,4 +1,8 @@
 // _printable.scss
 
 @media print {
+    a::after {
+        content: " (" attr(href) ") ";
+        text-decoration: underline;
+    }
 }
