--- a/resources/sass/components/_tables.scss
+++ b/resources/sass/components/_tables.scss
@@ -17,6 +17,7 @@
 
             &--table {
                 background: $color-primary;
+                color: $color-white;
                 th,
                 td {
                     font-weight: 500;
