--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -1,5 +1,10 @@
 // _base.scss
 
+html {
+    scroll-behavior: smooth;
+    color-scheme: dark light;
+}
+
 a:focus,
 a:focus-within,
 a:focus-visible,
@@ -50,4 +55,18 @@ h5 {
 
 h6 {
     font-size: 1em;
+}
+
+@media print {
+    h1 {
+        &.title {
+            font-size: 3em;
+        }
+    }
+
+    h2 {
+        &.title {
+            font-size: 2em;
+        }
+    }
 }
