--- a/resources/sass/components/_cards.scss
+++ b/resources/sass/components/_cards.scss
@@ -70,3 +70,27 @@
     left: 30px;
     bottom: 10%;
 }
+
+.message-card {
+    display: flex;
+    flex-direction: column;
+    padding: 2em;
+    background: $color-white;
+
+    &__header {
+        .header__title {
+            margin-bottom: 1em;
+        }
+
+        margin-bottom: 0.5em;
+    }
+
+    &__content {
+        flex: 1;
+        margin-top: 1.5em;
+    }
+
+    &__footer {
+        background: $color-white;
+    }
+}
