--- a/resources/sass/layouts/_main.scss
+++ b/resources/sass/layouts/_main.scss
@@ -1,10 +1,19 @@
 // _main.scss
 
 main {
-    > section:not(first-of-type) {
+    > section:not(.hero) {
         padding-top: 3.75em;
     }
+
     > section:last-of-type {
         padding-bottom: 3.75em;
+    }
+}
+
+@media print {
+    main {
+        > section:not(.hero) {
+            padding-top: 0;
+        }
     }
 }
