--- a/resources/sass/pages/_contact.scss
+++ b/resources/sass/pages/_contact.scss
@@ -3,16 +3,19 @@
 section#contact {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    margin: 0 1em;
 
     .left {
         width: 100%;
-        padding: 5em;
     }
 
     .right {
+        width: 100%;
+
         form {
             width: 100%;
+            padding: 2em;
+            background: $color-white;
         }
     }
 }
@@ -21,19 +24,26 @@ section#contact {
     section#contact {
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-start;
         overflow-x: hidden;
 
         .left {
             width: 50%;
-            padding: 5em;
         }
 
         .right {
+            width: 50%;
             form {
                 width: 700px;
                 transform: translateX(100%);
             }
+        }
+    }
+}
+
+@media print {
+    section#contact {
+        form {
+            margin: 0 auto;
         }
     }
 }
