Ready for Monday

--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -5,15 +5,6 @@ html {
     color-scheme: dark light;
 }
 
-a:focus,
-a:focus-within,
-a:focus-visible,
-a:active {
-    outline: 2px solid $color-secondary-dark;
-    outline-offset: 4px;
-    border-radius: $border-radius;
-}
-
 body {
     font-family: $font-family-primary;
     background: $color-light;
@@ -55,6 +46,38 @@ h5 {
 
 h6 {
     font-size: 1em;
+}
+
+a:focus,
+a:focus-within,
+a:focus-visible,
+a:active,
+button:focus,
+button:focus-within,
+button:focus-visible,
+button:active {
+    outline: 2px solid $color-secondary-dark;
+    outline-offset: 4px;
+    border-radius: $border-radius;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+svg {
+    height: 1.5rem;
+
+    .svg {
+        &--back {
+            fill: $color-black;
+        }
+        &--front {
+            fill: $color-primary;
+        }
+    }
 }
 
 @media print {
