--- a/resources/sass/components/_forms.scss
+++ b/resources/sass/components/_forms.scss
@@ -36,6 +36,7 @@ form {
             width: 100%;
             padding: 0.375em 0.625em;
             font-size: 1.125em;
+            background: none;
             border: none;
             border-color: rgba($color-black, 0.42);
             outline: none;
