--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -28,15 +28,15 @@
                 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
                 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
         }
-    }
 
-    &--contained.cta {
-        background-color: $color-secondary;
-        color: $color-primary;
+        &.cta {
+            background-color: $color-secondary;
+            color: $color-primary;
 
-        &:focus,
-        &:hover {
-            background-color: $color-secondary-dark;
+            &:focus,
+            &:hover {
+                background-color: $color-secondary-dark;
+            }
         }
     }
 
@@ -49,15 +49,15 @@
             background-color: rgba(25, 118, 210, 0.04);
             border: 1px solid $color-primary;
         }
-    }
 
-    &--outline.cta {
-        border: 1px solid rgba($color-secondary, 0.5);
-        color: $color-secondary;
+        &.cta {
+            border: 1px solid rgba($color-secondary, 0.5);
+            color: $color-secondary;
 
-        &:focus,
-        &:hover {
-            border: 1px solid $color-secondary;
+            &:focus,
+            &:hover {
+                border: 1px solid $color-secondary;
+            }
         }
     }
 
@@ -67,6 +67,10 @@
         &:focus,
         &:hover {
             background-color: rgba(25, 118, 210, 0.04);
+        }
+
+        &.cta {
+            color: $color-secondary;
         }
     }
 }
