--- a/resources/sass/components/_divider.scss
+++ b/resources/sass/components/_divider.scss
@@ -1,8 +1,9 @@
 // _divider.scss
 
 .divider {
-    height: 2px;
-    width: 12%;
-    margin: 0 auto;
-    background: rgba($color-white, 0.1);
+    height: 1px;
+    width: 50%;
+    margin: 0 auto 0.75em;
+    border: none;
+    background: linear-gradient(to left, rgba($color-white, 0) 0%, rgba($color-white, 0.25) 50%, rgba($color-white, 0) 100%);
 }
