--- a/resources/sass/components/_nav.scss
+++ b/resources/sass/components/_nav.scss
@@ -18,19 +18,16 @@ nav {
         0 1px 3px rgba(0, 0, 0, 0.12),
         0 1px 2px rgba(0, 0, 0, 0.24);
 
-    a {
+    a,
+    button {
         color: inherit;
+        font-family: inherit;
+        font-size: inherit;
         text-decoration: none;
         font-size: 1.2em;
         display: inline-block;
         min-width: max-content;
         width: 100%;
-    }
-
-    .button--text {
-        color: inherit;
-        font-family: inherit;
-        font-size: inherit;
     }
 
     .nav__main {
@@ -123,6 +120,11 @@ nav {
             font-size: 2em;
             background: none;
             box-shadow: none;
+            align-items: baseline;
+
+            .nav__main {
+                align-items: baseline;
+            }
 
             .nav__locale {
                 margin-top: 8px;
