--- a/resources/sass/layouts/_footer.scss
+++ b/resources/sass/layouts/_footer.scss
@@ -1,7 +1,6 @@
-footer {
+.page-footer {
+    padding: 0.75em 0;
     background: $color-primary;
     color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
