--- a/resources/sass/layouts/_section.scss
+++ b/resources/sass/layouts/_section.scss
@@ -1,6 +1,7 @@
 section {
     &.full-height {
-        height: 100dvh;
+        min-height: 100vh;
+        min-height: 100dvh;
     }
 
     &.content-grid {
