--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,6 +35,7 @@
 @import "components/articles";
 @import "components/socials";
 @import "components/divider";
+@import "components/switch";
 // @import "components/modal";
 // @import "components/form_group";
 // @import "components/cookie_banner";
