--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,12 +17,12 @@
 // Import layout styles
 @import "layouts/header";
 @import "layouts/main";
-@import "layouts/aside";
 @import "layouts/section";
 @import "layouts/footer";
 
 // Import page styles
 @import "pages/home";
+@import "pages/projects";
 @import "pages/contact";
 
 // Import component styles
