--- a/resources/sass/components/_nav.scss
+++ b/resources/sass/components/_nav.scss
@@ -77,7 +77,7 @@ nav {
                 display: none;
             }
 
-            ul {
+            .submenu {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -102,7 +102,7 @@ nav {
         }
 
         .nav__settings {
-            ul {
+            .submenu {
                 li {
                     span {
                         display: block;
@@ -166,10 +166,6 @@ nav {
             .nav__main {
                 align-items: baseline;
             }
-
-            .nav__locale {
-                margin-top: 8px;
-            }
         }
 
         .nav__main {
@@ -193,7 +189,6 @@ nav {
 
                 &:not(:last-of-type) {
                     margin-right: 1.5em;
-                    border-right: none;
                 }
             }
         }
@@ -201,12 +196,23 @@ nav {
         li.nav__secondary {
             margin-top: initial;
 
+            &:not(.invisible) {
+                position: absolute;
+                width: max-content;
+                top: 1.125em;
+                right: 1.5em;
+            }
+
             a,
             button {
                 width: fit-content;
             }
 
-            ul {
+            .nav__secondary__list {
+                display: flex;
+            }
+
+            .submenu {
                 display: flex;
             }
 
@@ -215,26 +221,53 @@ nav {
                 position: relative;
 
                 .submenu-selector {
-                    display: block;
+                    display: flex;
+                    height: 100%;
+                    font-size: 1.125rem;
+
+                    svg {
+                        height: 1.125rem;
+                    }
                 }
 
-                ul {
+                .submenu {
                     display: none;
                     position: absolute;
                     left: 50%;
                     transform: translateX(-50%);
-                    margin-top: 8px;
+                    padding-top: 8px;
+                    background: $color-primary;
+                    box-shadow:
+                        0 3px 6px rgba(0, 0, 0, 0.16),
+                        0 3px 6px rgba(0, 0, 0, 0.23);
+
+                    li {
+                        padding: 0;
+
+                        &:not(:last-of-type) {
+                            margin-right: 0;
+                            border: none;
+                        }
+
+                        a {
+                            padding: 1em 1.5em;
+                            width: 100%;
+                        }
+                    }
                 }
 
-                &:hover ul {
+                &:hover .submenu,
+                .submenu-selector:focus + .submenu,
+                .submenu-selector:active + .submenu,
+                .submenu:focus-within {
                     display: block;
                 }
             }
 
-            .nav__locale {
-                li {
-                    &:not(:last-of-type) {
-                        border: none;
+            .nav__settings {
+                .submenu {
+                    li {
+                        padding: 1em;
                     }
                 }
             }
