--- a/resources/sass/pages/_projects.scss
+++ b/resources/sass/pages/_projects.scss
@@ -38,10 +38,12 @@
 
         .tab-panel {
             display: none;
+            grid-template-rows: max-content;
+            grid-template-columns: 100%;
             grid-template-areas:
-                "banner banner banner"
-                "content content content"
-                "footer footer footer";
+                "banner"
+                "content"
+                "footer";
 
             height: 100%;
 
@@ -65,6 +67,10 @@
                 grid-area: footer;
 
                 .skills {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+
                     li {
                         display: inline-block;
                         background-color: rgba($color-light, 0.25);
@@ -73,14 +79,6 @@
                         border-radius: 4px;
                     }
                 }
-            }
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-            li {
-                margin-bottom: 10px;
             }
         }
     }
@@ -115,11 +113,40 @@
             width: 78.6%;
 
             .tab-panel {
+                grid-template-rows: auto 1fr;
+                grid-template-columns: minmax(21.4%, max-content) 1fr;
                 grid-template-areas:
                     "banner banner banner"
-                    "footer content content"
                     "footer content content";
                 grid-gap: 1em;
+
+                .tab-panel__footer {
+                    .skills {
+                        flex-direction: column;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media print {
+    .tabset {
+        display: block;
+
+        .nav-tabs {
+            display: none;
+        }
+
+        .tab-panels {
+            width: 78.6%;
+
+            .tab-panel {
+                display: block;
+
+                .tab-panel__banner {
+                    display: none;
+                }
             }
         }
     }
